# zerog-match3

./: .gitattributes  .gitignore  CMakeLists.txt  Cakefile  desktop.sh  emscripten.sh  gendoc.sh  gulpfile.js  license.md  match3.avprj  match3.js  match3.tpproj  match3.wasm  meson.build  meson_options.txt  package.json  readme.md  symlinks.bat  symlinks.sh
android/: AndroidManifest.xml  build.xml  local.properties
android/assets/assets/: assets.atlas
android/jni/src/: Android.mk
android/src/com/darkoverlordofdata/match3/: match3Activity.java
assets/images/: assets.atlas
assets/scripts/: Counter.lua  Counter.moon  Test.lua  Test.moon
data/: CMakeLists.txt  resources.gresource.xml
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
docs/: match3.data  match3.html
original/: Board.h  Jewel.cpp
po/: CMakeLists.txt  POTFILES.in
src/: Board.vala  CMakeLists.txt  Jewel.vala  TweenAccessors.vala  components.vala  entitas  entity.vala  goop  match3.vala  mt19937ar.c  mt19937ar.h  sdx  vapis  vapis-em
src/source/: main.vala
web/: index.html  index.js
